--- a/Shreeji Finance/src/main/resources/templates/admin/loan/kccloan.html
+++ b/Shreeji Finance/src/main/resources/templates/admin/loan/kccloan.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head lang="en" th:replace="head :: head"></head>
 	<body>
-		<!-- Vehicle loan page- STARTS -->
+		<!-- KCC loan page- STARTS -->
 		<div class="container py-5">
 		    <div class="row">
 		        <div class="col-md-12">
@@ -11,10 +11,10 @@
 		                    <!-- form card registration -->
 		                    <div class="card border-dark rounded-3">
 		                        <div class="card-header text-dark">
-		                            <h3 class="card-title">Vehicle Loan</h3>
+		                            <h3 class="card-title">KCC Loan</h3>
 		                        </div>
 		                        <div class="card-body">
-		                            <form id="vehicleloanform" autocomplete="off" action="#" th:action="@{/loan/vehicle/create}" method="post" class="form-horizontal" role="form">
+		                            <form id="kccloanform" autocomplete="off" action="#" th:action="@{/loan/kcc/create}" method="post" class="form-horizontal" role="form">
 		                            	<div class="row mb-4">
 		                            		<div class="col">
 		                            			<input id="inquirydate" name="inquiryDate" type="text" placeholder="Inquiry Date" class="form-control form-control-sm rounded-1 datepicker" required readonly="true"/>
@@ -26,29 +26,18 @@
 												<input type="number" name="phoneNumber" placeholder="Customer Contact No." class="form-control form-control-sm rounded-1" required/> 
 											</div>
 		                            	</div>
+
 		                            	<div class="row mb-4">
 		                            		<div class="col">
 		                            			<textarea name="address" class="form-control form-control-sm rounded-1" rows="2" cols="2" placeholder="Address" required="required"></textarea>
 		                            		</div>
-											<div class="col">
-		                            			<input type="text" name="vehicleName" placeholder="Vehicle Model Name" class="form-control form-control-sm rounded-1" required/>
-		                            		</div>
- 		                            		<div class="col">Vehicle Condition : 
-												<label class="radio-inline"><input type="radio" name="vehicleCondition" value="new" checked="checked">New</label>
-												<label class="radio-inline"><input type="radio" name="vehicleCondition" value="old">Old</label>
-												<input id="manufacturingYear" type="number" name="manufacturingYear" placeholder="Manufacturing Year" class="form-control form-control-sm rounded-1" required disabled="disabled"/>
-		                            		</div>
-		                            	</div>
-										<div class="row mb-4">
-		                            		<div class="col">
-		                            			<input type="text" name="financerName" placeholder="Finance By" class="form-control form-control-sm rounded-1" required/>
-		                            		</div> 
-											<div class="col">													
+		                            		<div class="col">													
 												<input type="number" step="0.01" name="loanAmount" placeholder="Loan amount" class="form-control form-control-sm rounded-1" required />
 											</div>
-											<div class="col">												
+		      								<div class="col">												
 												<input type="number" step="0.01" name="commissionAmount" placeholder="Commission amount" class="form-control form-control-sm rounded-1" required/> 
 											</div>
+		                            		
 		                            	</div>
 		                            	
 		                            	<div class="row mb-1">
@@ -89,7 +78,7 @@
 		                            		<div class="col">
 		                            		</div>
 		                            		<div class="col">
-		                            			<button id="sbtvehicleform" name="Submit" value="Done" type="Submit" th:text="Done" class="btn btn-success float-right" />
+		                            			<button id="sbtkccform" name="Submit" value="Done" type="Submit" th:text="Done" class="btn btn-success float-right" />
 		                            		</div>
 		                            	</div>
 									</form>		                            	
@@ -106,7 +95,7 @@
 		    </div>
 		    <!--/row-->
 		</div>
-		<!-- Vehicle loan page- ENDS -->
+		<!-- KCC loan page- ENDS -->
 		<th:block th:include="tail :: bodytail"></th:block>
 	</body>
 	<script type='text/javascript'>
@@ -129,16 +118,6 @@
 				maxDate: new Date()
 			});
 
-			//Vehicle Status			
-			$('input[name="vehicleCondition"]').change(function() {
-				var cheked = $('input[name="vehicleCondition"]:checked').val();
-				if("old"==cheked){
-					$('#manufacturingYear').prop("disabled",false);
-				}else{
-					$('#manufacturingYear').prop("disabled",true);
-				}
-			});
-			
 			//Loan Status
 			$('input[name="loanStatus"]').change(function() {
 				var cheked = $('input[name="loanStatus"]:checked').val();
@@ -149,14 +128,12 @@
 					
 					$('#pendingremark').prop("disabled",true);
 					$('#cancelremark').prop("disabled",true);
-					
 				}else if("pending"==cheked){
 					$('#loannumber').prop("disabled",true);
 					$('#loandate').prop("disabled",true);
 					$('#loancommissionamount').prop("disabled",true);
 					
 					$('#pendingremark').prop("disabled",false);
-	
 					$('#cancelremark').prop("disabled",true);
 				}else if("cancelled"==cheked){
 					$('#loannumber').prop("disabled",true);
@@ -164,13 +141,12 @@
 					$('#loancommissionamount').prop("disabled",true);
 					
 					$('#pendingremark').prop("disabled",true);
-					
 					$('#cancelremark').prop("disabled",false);
 				}
 			});
 			
-			$('#vehicleloanform').bind('submit', function (e) {
-			    $('#sbtvehicleform').prop('disabled', true);
+			$('#kccloanform').bind('submit', function (e) {
+			    $('#sbtkccform').prop('disabled', true);
 			});
 			
 		});
