--- a/Shreeji Finance/src/main/resources/templates/menu.html
+++ b/Shreeji Finance/src/main/resources/templates/menu.html
@@ -8,7 +8,7 @@
 
 	<div class="collapse navbar-collapse" id="navb">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item dropdown">
+<!-- 			<li class="nav-item dropdown">
 		      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
 		        Lead Management 
 		      </a>
@@ -17,7 +17,8 @@
 		        <a class="dropdown-item" href="/lead/search">Advance Search</a>
 		      </div>
 		   	</li>
-		
+ -->		
+ 			<li class="nav-item"><a class="nav-link" href="/lead/create">Create Lead</a></li>
 			<li class="nav-item"><a class="nav-link" href="/config">Administrative Activity</a></li>
 			<li class="nav-item"><a class="nav-link" href="/report">Report</a></li>
 		</ul>
